# fe8r-guide

./: .gitignore  CHANGELOG.md  README.md  add_to_db.py  add_to_db_models.py  config.json  deploy.sh  get_resources.py  package-lock.json  package.json  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  config.py  fe8r-guide.db  models.py
app/blueprints/: classes.py  codex.py  items.py  random_run.py  skills.py  units.py  utils.py
app/static/css/: custom.css  custom.min.css  iconsheet.css  iconsheet.min.css
app/static/js/: htmx.js
app/static/json/: affinities.json  arsenals.json  classes.json  classes.promos.json  items.category.json  items.category.new.json  items.json  lore.json  skills.category.json  skills.hidden.json  skills.json  stats.json  support_constants.json  support_pairs.json  units.category.json  units.json  weapon_ranks.json  weapons.json
app/templates/: 404.html.jinja2  500.html.jinja2  arsenal_index.html.jinja2  arsenal_sheet.html.jinja2  class_index.html.jinja2  class_index_list.jinja2  class_sheet.html.jinja2  codex_achievements.html.jinja2  codex_index.html.jinja2  codex_mechanics.html.jinja2  credits.html.jinja2  index.html.jinja2  item_index.html.jinja2  item_index_list.jinja2  item_sheet.html.jinja2  layout.html.jinja2  random_run_index.html.jinja2  random_run_output.html.jinja2  shop_index.html.jinja2  shop_sheet.html.jinja2  skill_index.html.jinja2  skill_index_list.jinja2  skill_sheet.html.jinja2  unit_class_sheet.html.jinja2  unit_index.html.jinja2  unit_index_list.jinja2  unit_sheet.html.jinja2  unit_sheet_class.html.jinja2
(+1 files in other folders)
