[project]
name = "fe8r-guide"
version = "0.1.5"
description = "Online reference guide for FE8r"
requires-python = ">=3.14"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.0",
    "flask==3.1.2",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.2.4",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "packaging==25.0",
    "pillow==12.0.0",
    "sqlalchemy==2.0.44",
    "typing-extensions==4.15.0",
    "werkzeug==3.1.3",
]
